@@ -74,10 +74,6 @@
                 Foo document
             </a>&quot;
         </p>
-
-        <div metal:use-macro="here/document_relateditems/macros/relatedItems">
-            show related items if they exist
-        </div>
     
         <div tal:replace="structure provider:plone.belowcontentbody" />
 
